// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render real Stats and Projects 1`] = `
<div
  className="sc-section sc-columns"
>
  <div
    className="sc-column sc-column-full"
  >
    <h3>
      Over 3,000 Projects
      <br />
      Continuously Analyzed
    </h3>
  </div>
</div>
`;

exports[`should not render real Stats and Projects 2`] = `
<div
  className="sc-section sc-columns"
>
  <div
    className="sc-column sc-column-full"
  >
    <h6
      className="spacer-bottom"
    >
      Come join the fun, it’s entirely free for open-source projects!
    </h6>
    <div
      className="sc-spacer-bottom"
    >
      <LoginButtons />
    </div>
  </div>
</div>
`;

exports[`should render 1`] = `
<div
  className="global-container"
>
  <div
    className="page-wrapper"
  >
    <div
      className="page-container sc-page"
    >
      <HelmetWrapper
        defer={true}
        encodeSpecialCharacters={true}
        title="SonarCloud | Clean Code, Rockstar Status"
      >
        <meta
          content="Enhance your workflow with continuous code quality, SonarCloud automatically analyzes and decorates pull requests on GitHub, Bitbucket and Azure DevOps on major languages."
          name="description"
        />
      </HelmetWrapper>
      <FixedNavBar />
      <PageBackgroundHeader />
      <TopNavBar />
      <PageTitle />
      <EnhanceWorkflow />
      <Functionality />
      <Languages />
      <Stats
        data={
          Object {
            "featuredProjects": Array [
              Object {
                "avatarUrl": null,
                "bugs": 0,
                "codeSmells": 7,
                "coverage": 9.7,
                "duplications": 56.2,
                "gateStatus": "OK",
                "key": "sonarsource-jfrog.simple-js-php-project",
                "languages": Array [
                  "js",
                  "php",
                ],
                "maintainabilityRating": 1,
                "name": "Simple JS & PHP project",
                "ncloc": 123456,
                "organizationKey": "sonarsource-jfrog",
                "organizationName": "SonarSource & JFrog",
                "reliabilityRating": 1,
                "securityRating": 1,
                "vulnerabilities": 654321,
              },
            ],
            "publicLoc": 12345,
            "publicProjects": 236,
            "pullRequests": 123456,
            "rules": 1234,
          }
        }
      />
      <Projects
        featuredProjects={
          Array [
            Object {
              "avatarUrl": null,
              "bugs": 0,
              "codeSmells": 7,
              "coverage": 9.7,
              "duplications": 56.2,
              "gateStatus": "OK",
              "key": "sonarsource-jfrog.simple-js-php-project",
              "languages": Array [
                "js",
                "php",
              ],
              "maintainabilityRating": 1,
              "name": "Simple JS & PHP project",
              "ncloc": 123456,
              "organizationKey": "sonarsource-jfrog",
              "organizationName": "SonarSource & JFrog",
              "reliabilityRating": 1,
              "securityRating": 1,
              "vulnerabilities": 654321,
            },
          ]
        }
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`should render 2`] = `
<div
  className="sc-header-background"
>
  <div
    className="sc-background-start"
  />
  <div
    className="sc-background-end"
  />
  <div
    className="sc-background-center"
  >
    <img
      alt=""
      height="418px"
      src="/images/sonarcloud/home-header.svg"
    />
  </div>
</div>
`;

exports[`should render 3`] = `
<div
  className="sc-section sc-columns big-spacer-top"
>
  <div
    className="sc-column sc-column-half display-flex-center"
  >
    <div>
      <h1
        className="sc-title-orange big-spacer-top"
      >
        Clean Code
      </h1>
      <h1
        className="sc-spacer-bottom"
      >
        Rockstar Status
      </h1>
      <h5
        className="sc-big-spacer-bottom sc-regular-weight"
      >
        Eliminate bugs and vulnerabilities.
        <br />
        Champion quality code in your projects.
      </h5>
      <div>
        <h6>
          Go ahead! Analyze your repo:
        </h6>
        <LoginButtons />
        <p
          className="sc-mention sc-regular-weight big-spacer-top"
        >
          Free for Open-Source Projects
        </p>
      </div>
    </div>
  </div>
  <div
    className="sc-column sc-column-half text-right"
  >
    <img
      alt=""
      src="/images/sonarcloud/home-header-people.png"
      width="430px"
    />
  </div>
</div>
`;

exports[`should render 4`] = `
<div
  className="sc-section sc-columns"
>
  <div
    className="sc-column sc-column-full"
  >
    <h3
      className="sc-big-spacer-bottom"
    >
      Enhance Your Workflow
      <br />
      with Continuous Code Quality
    </h3>
    <img
      alt=""
      className="sc-big-spacer-bottom"
      src="/images/sonarcloud/home-branch.png"
      srcSet="/images/sonarcloud/home-branch.png 1x, /images/sonarcloud/home-branch@2x.png 2x"
    />
    <h5
      className="spacer-bottom"
    >
      Maximize your throughput and only release clean code
    </h5>
    <h6
      className="sc-big-spacer-bottom sc-regular-weight"
    >
      SonarCloud automatically analyzes branches and decorates pull requests
    </h6>
  </div>
</div>
`;

exports[`should render 5`] = `
<div
  className="position-relative"
>
  <div
    className="sc-functionality-background"
  >
    <div
      className="sc-background-center"
    >
      <img
        alt=""
        height="300px"
        src="/images/sonarcloud/home-grey-background.svg"
      />
    </div>
  </div>
  <div
    className="sc-functionality-container"
  >
    <div
      className="sc-section"
    >
      <h3
        className="sc-big-spacer-bottom text-center"
      >
        Functionality
        <br />
        that Fits Your Projects
      </h3>
      <div
        className="sc-columns"
      >
        <div
          className="sc-column sc-column-small big-spacer-top"
        >
          <h6
            className="sc-regular-weight spacer-bottom"
          >
            Easy to Use
          </h6>
          <p>
            With just a few clicks you’re up and running right where your code lives. Immediate access to the latest features and enhancements.
          </p>
          <div
            className="sc-separator"
          />
          <span
            className="big-spacer-bottom sc-with-icon"
          >
            <img
              alt=""
              className="big-spacer-right"
              src="/images/sonarcloud/scale.svg"
            />
             
            Scale on-demand as your projects grow.
          </span>
          <span
            className="sc-with-icon"
          >
            <img
              alt=""
              className="big-spacer-right"
              src="/images/sonarcloud/stop.svg"
            />
             
            No contracts, stop/start anytime.
          </span>
        </div>
        <div
          className="sc-column sc-column-big big-spacer-top"
        >
          <img
            alt=""
            className="sc-rounded-img"
            src="/images/sonarcloud/home-easy-to-use.png"
            srcSet="/images/sonarcloud/home-easy-to-use.png 1x, /images/sonarcloud/home-easy-to-use@2x.png 2x"
          />
        </div>
      </div>
      <div
        className="sc-columns"
      >
        <div
          className="sc-column sc-column-big"
        >
          <img
            alt=""
            className="sc-rounded-img"
            src="/images/sonarcloud/home-open-transparent.png"
            srcSet="/images/sonarcloud/home-open-transparent.png 1x, /images/sonarcloud/home-open-transparent@2x.png 2x"
          />
        </div>
        <div
          className="sc-column sc-column-small"
        >
          <div>
            <h6
              className="sc-regular-weight spacer-bottom"
            >
              Open and Transparent
            </h6>
            <p
              className="big-spacer-bottom"
            >
              Project dashboards keep teams and stakeholders informed on code quality and releasability.
            </p>
            <p>
              Display project badges and show your communities you’re all about awesome.
            </p>
            <img
              alt=""
              className="big-spacer-top"
              src="/images/project_badges/sonarcloud-black.svg"
              width="200px"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-columns"
      >
        <div
          className="sc-column sc-column-full big-spacer-bottom"
        >
          <div>
            <h6
              className="sc-regular-weight spacer-bottom"
            >
              Effective Collaboration
            </h6>
            <p
              className="sc-with-inline-icon"
            >
              Use
              <img
                alt="SonarCloud"
                src="/images/sonarcloud/sonarcloud-logo-text-only.svg"
              />
              with your team, share best practices and have fun writing quality code!
            </p>
            <br />
            <p
              className="sc-with-inline-icon"
            >
              Connect with
              <img
                alt="SonarCloud"
                src="/images/sonarcloud/sonarlint-logo.svg"
              />
              and get real-time notifications in your IDE as you work.
            </p>
            <div
              className="big-spacer-top"
            >
              <img
                alt=""
                className="big-spacer-top huge-spacer-bottom"
                src="/images/sonarcloud/ide.svg"
                width="216px"
              />
            </div>
            <img
              alt=""
              src="/images/sonarcloud/collab.svg"
              width="540px"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-functionality-background sc-functionality-background-bottom"
  >
    <div
      className="sc-background-center"
    >
      <img
        alt=""
        height="140px"
        src="/images/sonarcloud/home-background-grey-bottom.svg"
      />
    </div>
  </div>
</div>
`;

exports[`should render 6`] = `
<div
  className="position-relative"
>
  <div
    className="sc-languages-container clearfix"
  >
    <div
      className="sc-section sc-columns"
    >
      <div
        className="sc-column-full"
      >
        <h3
          className="sc-big-spacer-bottom"
        >
          SonarCloud speaks your language
        </h3>
        <ul
          className="sc-languages-list"
          style={
            Object {
              "height": undefined,
            }
          }
        >
          <li
            key="Java"
          >
            <img
              alt="Java"
              src="/images/languages/java.svg"
              width={65}
            />
          </li>
          <li
            key="JavaScript"
          >
            <img
              alt="JavaScript"
              src="/images/languages/js.svg"
              width={60}
            />
          </li>
          <li
            key="TypeScript"
          >
            <img
              alt="TypeScript"
              src="/images/languages/ts.svg"
              width={100}
            />
          </li>
          <li
            key="C#"
          >
            <img
              alt="C#"
              src="/images/languages/csharp.svg"
              width={60}
            />
          </li>
          <li
            key="Python"
          >
            <img
              alt="Python"
              src="/images/languages/python.svg"
              width={65}
            />
          </li>
          <li
            key="C++"
          >
            <img
              alt="C++"
              src="/images/languages/c-c-plus-plus.svg"
              width={53}
            />
          </li>
          <li
            key="Go"
          >
            <img
              alt="Go"
              src="/images/languages/go.svg"
              width={91}
            />
          </li>
          <li
            key="Kotlin"
          >
            <img
              alt="Kotlin"
              src="/images/languages/kotlin.svg"
              width={42}
            />
          </li>
          <li
            key="Ruby"
          >
            <img
              alt="Ruby"
              src="/images/languages/ruby.svg"
              width={43}
            />
          </li>
          <li
            key="Swift"
          >
            <img
              alt="Swift"
              src="/images/languages/swift.svg"
              width={64}
            />
          </li>
        </ul>
        <a
          className="bt bt-large bt-nav bt-orange2 display-inline-flex-center"
          href="#"
          onClick={[Function]}
        >
          See All Languages
          <SCChevronDownIcon
            className="little-spacer-left"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 7`] = `
<div
  className="sc-section sc-columns"
>
  <div
    className="sc-column sc-column-full"
  >
    <h3>
      Over 3,000 Projects
      <br />
      Continuously Analyzed
    </h3>
    <Statistics
      statistics={
        Array [
          Object {
            "icon": "rules",
            "text": "Static analysis rules checked",
            "value": 1234,
          },
          Object {
            "icon": "locs",
            "text": "Lines of code analyzed",
            "value": 12345,
          },
          Object {
            "icon": "pull-request",
            "text": "Pull Requests decorated/week",
            "value": undefined,
          },
          Object {
            "icon": "open-source",
            "text": "Open-source projects inspected",
            "value": 236,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`should render 8`] = `
<div
  className="sc-section sc-columns"
>
  <div
    className="sc-column sc-column-full"
  >
    <h6
      className="big-spacer-bottom"
    >
      Transparency makes sense
      <br />
      and that’s why the trend is growing.
    </h6>
    <p>
      Check out these open-source projects showing users
      <br />
      their commitment to quality.
    </p>
    <FeaturedProjects
      projects={
        Array [
          Object {
            "avatarUrl": null,
            "bugs": 0,
            "codeSmells": 7,
            "coverage": 9.7,
            "duplications": 56.2,
            "gateStatus": "OK",
            "key": "sonarsource-jfrog.simple-js-php-project",
            "languages": Array [
              "js",
              "php",
            ],
            "maintainabilityRating": 1,
            "name": "Simple JS & PHP project",
            "ncloc": 123456,
            "organizationKey": "sonarsource-jfrog",
            "organizationName": "SonarSource & JFrog",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 654321,
          },
        ]
      }
    />
    <h6
      className="spacer-bottom"
    >
      Come join the fun, it’s entirely free for open-source projects!
    </h6>
    <div
      className="sc-spacer-bottom"
    >
      <LoginButtons />
    </div>
  </div>
</div>
`;
